# The-Arena

./: .env.example  Anchor.toml  README.md  arena_config.toml  package.json  tsconfig.json
api/: package.json
api/src/: db.ts  server.ts
api/src/routes/: gladiator.ts  health.ts  scores.ts  squads.ts
frontend/: next.config.js  package.json
frontend/components/Arena/: ArenaTab.tsx  GladiatorBracket.tsx  MatchCard.tsx  RasCalculator.tsx  SquadCard.tsx  SquadLeaderboard.tsx
frontend/components/hooks/: useGladiator.ts  useRas.ts  useSquads.ts
frontend/pages/: _app.tsx  competition.tsx  index.tsx
indexer/: drizzle.config.ts  package.json
indexer/src/: bracket_engine.ts  db.ts  index.ts  poller.ts  ras.ts  schema.ts  squad_aggregator.ts
programs/arena/: Cargo.toml
programs/arena/src/: lib.rs
programs/arena/src/instructions/: advance_bracket.rs  create_competition.rs  create_squad.rs  join_squad.rs  leave_squad.rs  mod.rs  register_gladiator.rs  settle_prizes.rs  update_squad_ras.rs
programs/arena/src/state/: bracket.rs  competition.rs  match_record.rs  membership.rs  mod.rs  squad.rs  trade_proof.rs
scripts/: deploy.ts  run_test_competition.ts  seed_devnet.ts  tsconfig.json
tests/: bracket.test.ts  program.test.ts  ras.test.ts
